@@ -25,9 +25,13 @@ import org.treetank.api.IConstants;
 
 public final class UTF {
 
-  public static final int MAX_HASH_LENGTH = 32;
-
   public static final byte[] EMPTY = new byte[0];
+
+  private static final int MAX_HASH_LENGTH = 32;
+
+  private static final int ASCII_OFFSET = 48;
+
+  private static final int ASCII_MINUS = 45;
 
   /**
    * Default constructor is hidden.
@@ -45,7 +49,7 @@ public final class UTF {
     return h;
   }
 
-  public static final String convert(final byte[] bytes) {
+  public static final String parseString(final byte[] bytes) {
     String string = null;
     try {
       string = new String(bytes, IConstants.DEFAULT_ENCODING);
@@ -56,7 +60,61 @@ public final class UTF {
     return string;
   }
 
-  public static final byte[] convert(final String string) {
+  public static final int parseInt(final byte[] bytes) {
+    int value = 0;
+    int power = 1;
+    if (bytes[0] == (byte) ASCII_MINUS) {
+      for (int i = bytes.length - 1; i > 0; i--) {
+        value += (bytes[i] - ASCII_OFFSET) * power;
+        power *= 10;
+      }
+      return value *= -1;
+    } else {
+      for (int i = bytes.length - 1; i >= 0; i--) {
+        value += (bytes[i] - ASCII_OFFSET) * power;
+        power *= 10;
+      }
+      return value;
+    }
+  }
+
+  public static final byte[] getBytes(final int value) {
+    byte[] bytes = null;
+    if (value > 0) {
+      int remainder = value;
+      final int length = (int) Math.log10((double) remainder);
+      bytes = new byte[length + 1];
+      int dividend = (int) Math.pow((double) 10, (double) length);
+      int digit = 0;
+      for (int i = length; i >= 0; i--) {
+        digit = (byte) (remainder / dividend);
+        bytes[length - i] = (byte) (digit + ASCII_OFFSET);
+        remainder -= digit * dividend;
+        dividend /= 10;
+      }
+      return bytes;
+    } else if (value < 0) {
+      long remainder = Math.abs((long) value);
+      final int length = (int) Math.log10((double) remainder);
+      bytes = new byte[length + 2];
+      long dividend = (int) Math.pow((double) 10, (double) length);
+      int digit = 0;
+      for (int i = length; i >= 0; i--) {
+        digit = (byte) (remainder / dividend);
+        bytes[length + 1 - i] = (byte) (digit + ASCII_OFFSET);
+        remainder -= digit * dividend;
+        dividend /= 10;
+      }
+      bytes[0] = (byte) ASCII_MINUS;
+      return bytes;
+    } else {
+      bytes = new byte[1];
+      bytes[0] = (byte) ASCII_OFFSET;
+      return bytes;
+    }
+  }
+
+  public static final byte[] getBytes(final String string) {
     byte[] bytes = null;
     try {
       if (string == null || string.length() == 0) {
@@ -91,15 +149,15 @@ public final class UTF {
   }
 
   public static final boolean equals(final byte[] value1, final String value2) {
-    return equals(value1, UTF.convert(value2));
+    return equals(value1, UTF.getBytes(value2));
   }
 
   public static final boolean equals(final String value1, final byte[] value2) {
-    return equals(UTF.convert(value1), value2);
+    return equals(UTF.getBytes(value1), value2);
   }
 
   public static final boolean equals(final String value1, final String value2) {
-    return equals(UTF.convert(value1), UTF.convert(value2));
+    return equals(UTF.getBytes(value1), UTF.getBytes(value2));
   }
 
 }
